# deckard

./: Cargo.toml  LICENSE  README.md  TODO.md  coverage.sh  ideas.txt
.github/workflows/: build.yml
src/: args.rs  deck.rs  euchre.rs  french.rs  main.rs  todo.txt
src/euchre/: action.rs  card.rs  error.rs  game.rs  player.rs  round.rs  seat.rs  trick.rs  tui.rs
src/euchre/player/: console.rs  robot.rs
src/euchre/round/: base.rs  log.rs  logging.rs  tricks.rs
src/euchre/round/log/: test.rs
src/euchre/tui/: action.rs  arena.rs  hand.rs  history.rs  info.rs  scoreboard.rs
src/euchre/tui/history/: tree.rs
src/euchre/tui/history/tree/: test.rs
src/game/: euchre.rs  mod.rs  war.rs
src/game/euchre/: action.rs  card.rs  error.rs  game.rs  player.rs  round.rs  seat.rs  trick.rs  tui.rs
src/game/euchre/player/: console.rs  robot.rs  scripted.rs
src/game/euchre/round/: base.rs  bidding.rs  log.rs  logging.rs  tricks.rs
src/game/euchre/round/log/: test.rs
src/game/euchre/tui/: action.rs  arena.rs  hand.rs  history.rs  info.rs  scoreboard.rs
