[package]
name = "deckard"
version = "0.1.0"
authors = ["Gregory Smith <gasmith@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.86"
assert_matches = "1.5.0"
itertools = "0.13.0"
rand = "0.8.5"
ratatui = { version = "0.28.0", optional = true }

[features]
tui = ["ratatui"]
ratatui = ["dep:ratatui"]
